# pgrx

./: .gitattributes  .gitignore  Cargo.toml  README.md  prepare-release.sh  publish.sh  rust-analyzer.toml  update-versions.sh  v18-ONE-COMPILE-CHANGELOG.md  v18-TYPE-RESOLUTION.md  v18.0-MIGRATION.md
.github/docker/: Dockerfile.fedora
.github/workflows/: package-test.yaml  runas.yml  tests.yml  will-it-blend-develop.yml
articles/: README.md  forging-sql-from-rust.md  postgresql-aggregates-with-rust.md
cargo-pgrx/: Cargo.toml  README.md
cargo-pgrx/src/: cargo.rs  env.rs  main.rs  manifest.rs  metadata.rs  object_utils.rs  profile.rs
cargo-pgrx/src/command/: bench.rs  connect.rs  get.rs  info.rs  init.rs  install.rs  mod.rs  new.rs  package.rs  pgrx-bench.sql  pgrx.rs  regress.rs  run.rs  schema.rs  start.rs  stop.rs  sudo_install.rs  test.rs  upgrade.rs  version.rs
cargo-pgrx/src/command/cross/: pgrx_target.rs
cargo-pgrx/src/templates/: bgworker_lib_rs  cargo_toml  control  lib_rs  setup_out
cargo-pgrx/tests/: cli_upgrade.rs  install_pg_test_regression.rs
cargo-pgrx/tests/fixtures/package/: expected-0.16.0.toml  expected-0.16.1.toml  expected-0.18.0.toml
cargo-pgrx/tests/fixtures/package/src/: lib.rs
cargo-pgrx/tests/fixtures/workspace/: Cargo.toml  expected-0.18.1.toml
cargo-pgrx/tests/fixtures/workspace/hello/: Cargo.toml  expected-0.18.1.toml  hello.control
cargo-pgrx/tests/fixtures/workspace/hello/src/: lib.rs
docs/src/: SUMMARY.md  articles.md
docs/src/contributing/: pgrx-internal.md
docs/src/extension/: install.md
pgrx/: Cargo.toml
pgrx-bench/: Cargo.toml  README.md
pgrx-bench/src/: lib.rs  pgrx.rs
pgrx-bindgen/: Cargo.toml
pgrx-bindgen/src/: build.rs  lib.rs
pgrx-examples/: README.md
pgrx-examples/aggregate/: Cargo.toml  aggregate.control
pgrx-examples/aggregate/src/: lib.rs
pgrx-examples/arrays/: Cargo.toml  arrays.control
pgrx-examples/arrays/src/: lib.rs
pgrx-examples/bad_ideas/: Cargo.toml  bad_ideas.control
pgrx-examples/bad_ideas/src/: lib.rs
pgrx-examples/benching/: Cargo.toml  README.md  benching.control
pgrx-examples/benching/src/: lib.rs
pgrx-examples/bgworker/: Cargo.toml  bgworker.control
pgrx-examples/bgworker/src/: lib.rs
pgrx-examples/bytea/: Cargo.toml  bytea.control
pgrx-examples/composite_type/: Cargo.toml  composite_type.control
pgrx-examples/custom_libname/: Cargo.toml  other_name.control
pgrx-examples/custom_sql/: Cargo.toml  custom_sql.control
pgrx-examples/custom_types/: Cargo.toml  custom_types.control
pgrx-examples/datetime/: Cargo.toml  datetime.control
pgrx-examples/errors/: Cargo.toml  errors.control
pgrx-examples/generic_agg/: Cargo.toml  README.md  generic_agg.control
pgrx-examples/hooks/: Cargo.toml  README.md  hooks.control
pgrx-examples/json/: Cargo.toml  json.control
pgrx-examples/memory_contexts/: .gitignore  Cargo.toml  README.md  memory_contexts.control
pgrx-examples/nostd/: Cargo.toml  nostd.control
pgrx-examples/numeric/: Cargo.toml  numeric.control
pgrx-examples/operators/: Cargo.toml  operators.control
pgrx-examples/pglz_inspect/: Cargo.toml  README.md  pglz_inspect.control
pgrx-examples/pgthread/: .gitignore  Cargo.toml  build.rs  pgthread.control
pgrx-examples/pgtrybuilder/: Cargo.toml  pgtrybuilder.control
pgrx-examples/postgres_type_variants/: Cargo.toml  README.md  postgres_type_variants.control
pgrx-examples/range/: .gitignore  Cargo.toml  range.control
pgrx-examples/rewrite_manip/: Cargo.toml  README.md  rewrite_manip.control
pgrx-examples/schemas/: Cargo.toml  schemas.control
pgrx-examples/shmem/: Cargo.toml  shmem.control
pgrx-examples/spi/: Cargo.toml  spi.control
pgrx-examples/spi_srf/: Cargo.toml  spi_srf.control
pgrx-examples/srf/: Cargo.toml  srf.control
pgrx-examples/strings/: Cargo.toml  strings.control
pgrx-examples/subtrans_infos/: Cargo.toml  README.md  subtrans_infos.control
pgrx-examples/triggers/: Cargo.toml  triggers.control
pgrx-examples/versioned_custom_libname_so/: Cargo.toml  versioned_othername.control
pgrx-examples/versioned_so/: Cargo.toml  versioned_so.control
pgrx-examples/wal_decoder/: Cargo.toml  wal_decoder.control
pgrx-examples/wal_decoder/src/: lib.rs
pgrx-macros/: Cargo.toml  README.md
pgrx-macros/src/: lib.rs  operators.rs  pg_bench.rs  rewriter.rs
pgrx-pg-config/: Cargo.toml
pgrx-pg-config/src/: cargo.rs  decoding.rs  lib.rs  path_methods.rs
pgrx-pg-sys/: Cargo.toml  pgrx-cshim.c
pgrx-pg-sys/include/: pg13.h  pg14.h  pg15.h  pg16.h  pg17.h  pg18.h  pg19.h
pgrx-pg-sys/src/: cshim.rs  cstr.rs  include.rs  lib.rs  libpq.rs  port.rs
pgrx-sql-entity-graph/: Cargo.toml
pgrx-sql-entity-graph/src/: composite_type.rs  control_file.rs  enrich.rs  extern_args.rs  finfo.rs  fmt.rs  lib.rs  lifetimes.rs  pgrx_attribute.rs  pgrx_sql.rs  positioning_ref.rs  section.rs  used_type.rs
pgrx-tests/: Cargo.toml  README.md  pgrx_tests.control
pgrx-tests/src/: framework.rs  lib.rs
pgrx-unit-tests/: Cargo.toml  README.md  pgrx_unit_tests.control
pgrx-unit-tests/src/: lib.rs
pgrx/src/: aggregate.rs  array.rs  atomics.rs  bgworkers.rs  callconv.rs  datetime.rs  enum_helper.rs  fcinfo.rs  fn_call.rs  guc.rs  heap_tuple.rs  hooks.rs  htup.rs  itemptr.rs  iter.rs  lib.rs  list.rs  lwlock.rs  memcx.rs  memcxt.rs  namespace.rs  nullable.rs  palloc.rs  pgbox.rs  prelude.rs  rel.rs  shmem.rs  spinlock.rs  stringinfo.rs  toast.rs  tupdesc.rs  varlena.rs  wrappers.rs
skills/cargo-pgrx/: SKILL.md  init.md  run.md  test.md
tools/: docsrs-check.sh
tools/version-updater/: Cargo.toml
(+324 files in other folders)
