[package]
name = "wal_decoder"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]


[features]
default = ["pg13"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg19 = ["pgrx/pg19", "pgrx-tests/pg19"]
pg_test = []

[dependencies]
pgrx = { path = "../../pgrx" }
serde = "1.0.228"
serde_json = "1.0.150"

[dev-dependencies]
pgrx-tests = { path = "../../pgrx-tests" }
